src/test/deca/context/valid/modulo.deca
// Description:
//   Binary operation modulo
//
// Resultats:
//    ok
// 
// Historique:
//    cree le 01/01/2016

{
    int a;
    int b;
    a = a % b;
}
