src/test/deca/context/invalid/decl_init/init_bool_in_int.deca
// Description:
//    Déclaration de variables
//
// Resultats:
//    Line 9 : Incompatible type initialization
//

{
   int a = false;
}
